Fix z-index menu bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -75,6 +75,7 @@ h1 {
   left: 0;
   top: 0;
   width: 100%;
+  z-index: +1;
 }
 
 .sticky {
